# nats-s3

./: Cargo.toml  Justfile  README.md  bacon.toml  docker-compose.yaml  package.json  script.js
src/: main.rs  signature.rs  tempfile.rs
