[package]
name = "nats-s3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.44.2"
axum = { version = "0.8.6", features = ["http2"] }
axum-extra = { version = "0.12.0", features = ["typed-header"] }
clap = { version = "4.5.51", features = ["env", "derive"] }
tokio = { version = "1.48.0", features = ["full"] }
aws-credential-types = "1.1.4"
aws-sigv4 = { version = "1.1.4", features = ["sign-http"] }
askama = { version = "0.14.0" }
askama_axum = "0.4.0"
quick-xml = { version = "0.38.3", features = ["serialize", "async-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.32", features = ["parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
futures-util = "0.3.31"
